updated write file error

--- a/create_more_dataset.ipynb
+++ b/create_more_dataset.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### combine datasets for produce txt files"
+    "### combine datasets to produce txt files"
    ]
   },
   {
@@ -421,8 +421,8 @@
    "outputs": [],
    "source": [
     "df_train.to_csv(folder + '/' + 'train_split_v4.txt', index=False, header = False)\n",
-    "df_val.to_csv(folder + '/' + 'train_split_v4.txt', index=False, header = False)\n",
-    "df_test.to_csv(folder + '/' + 'train_split_v4.txt', index=False, header = False)\n"
+    "df_val.to_csv(folder + '/' + 'val_split_v4.txt', index=False, header = False)\n",
+    "df_test.to_csv(folder + '/' + 'test_split_v4.txt', index=False, header = False)\n"
    ]
   },
   {
