add a test section (split dataset)

--- a/create_more_dataset.ipynb
+++ b/create_more_dataset.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,9 +374,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train train    6372\n",
+      "Name: source, dtype: int64\n",
+      "val   train    1593\n",
+      "Name: source, dtype: int64\n",
+      "test  train    885\n",
+      "Name: source, dtype: int64\n",
+      "------------------------------\n",
+      "train train    4352\n",
+      "Name: source, dtype: int64\n",
+      "val   train    1088\n",
+      "Name: source, dtype: int64\n",
+      "test  train    600\n",
+      "test       4\n",
+      "Name: source, dtype: int64\n",
+      "------------------------------\n",
+      "train train    192\n",
+      "Name: source, dtype: int64\n",
+      "val   train    44\n",
+      "test      4\n",
+      "Name: source, dtype: int64\n",
+      "test  test    26\n",
+      "Name: source, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "print('train', normal_train.source.value_counts())\n",
     "print('val  ', normal_val.source.value_counts())\n",
@@ -401,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,6 +472,47 @@
    ],
    "source": [
     "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### check if the file exists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_name = ['pID', 'fname', 'diagnose', 'extra', 'add extra', 'add_extra2']\n",
+    "df_train_final = pd.read_csv(folder + '/train_split_v4.txt', header= None, sep =',', names = c_name)\n",
+    "df_val_final = pd.read_csv(folder + '/val_split_v4.txt', header= None, sep =',', names = c_name)\n",
+    "df_test_final = pd.read_csv(folder + '/test_split_v4.txt', header= None, sep =',', names = c_name)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(all([os.path.exists(folder + '/train2/' + f) for f in df_train_final.fname]))\n",
+    "print(all([os.path.exists(folder + '/val2/' + f) for f in df_val_final.fname]))\n",
+    "print(all([os.path.exists(folder + '/test2/' + f) for f in df_test_final.fname]))"
    ]
   },
   {
